--- a/index.html
+++ b/index.html
@@ -11,14 +11,14 @@
 <body>
     <div class="greetings">
     <!-- silahkan menambah kata sesuai keinginan dengan <span>text...</span -->
-        <span>K</span>
+        <span>T</span>
+        <span>Y</span>
         <span>A</span>
-        <span>M</span>
-        <span>U</span>
+        <span>S</span>
     </div>
   
     <div class="description">
-        <span>Aku ada hadiah spesial buat kamu!</span>
+        <span>aku ada hadiah spesial buat kamu!!</span>
     </div>
     <div class="button">
         <button>
